--- a/sass/03_utilities/_utilities.typography.scss
+++ b/sass/03_utilities/_utilities.typography.scss
@@ -127,6 +127,6 @@
   }
 }
 
-.txt-color-black {
+.txt-black {
   color: $gray-100;
 }
